--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,11 @@ a:link, a:visited, a:active {
   color: #690;
 }
 
-a:hover, a:focus {
-  color: #FFBF00;
+p > a:hover, p > a:focus {
+  color: #EAE0CC;
   font-weight: normal;
+}
+
+h1 > a:hover, h1 > a:focus {
+  color: #EAE0CC;
 }
