Add posts lists to frontpage

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@ a:link, a:visited, a:active {
   color: #CE796B;
 }
 
-p > a:hover, p > a:focus, small > a:hover, small > a:focus {
+p > a:hover, p > a:focus, small > a:hover, small > a:focus, li > a:hover, li > a:focus {
   color: #F6BE9A;
   font-weight: normal;
 }
