--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,12 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.twitter }}">Twitter</a></p>
 
+        <h3>Posts</h3>
         <ul>
             {% for post in site.posts %}
-            <li>
-                <a href="{{ post.url }}">{{ post.title }}</a>
-            </li>
+            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
             {% endfor %}
         </ul>
 
