Update content with latest projects and more links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
 
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.twitter }}">Twitter</a></p>
 
+        <h3><a href="/">Home</a></h3>
+        <h3><a href="/projects.html">Projects</a></h3>
         <h3>Posts</h3>
         <ul>
             {% for post in site.posts %}
