--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,16 +27,9 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.twitter }}">Twitter</a></p>
+        <h3><a href="/">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a></h3>
 
-        <h3><a href="/">Home</a></h3>
-        <h3><a href="/projects.html">Projects</a></h3>
-        <h3>Posts</h3>
-        <ul>
-            {% for post in site.posts %}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-        </ul>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.twitter }}">Twitter</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
