--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
         <h3><a href="/">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a></h3>
 
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.dev.to }}">dev.to</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="{{ site.socials.linkedin }}">LinkedIn</a> | <a href="{{ site.socials.dev }}">DEV</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
